Codex-Latinus/src/main/java/antlr4/com/CodexLatinusGrammarParser.java
// Generated from /home/juanpa/Documentos/Codex-Latinus/Codex-Latinus/src/main/java/antlr4/com/CodexLatinusGrammar.g4 by ANTLR 4.13.2

    package antlr4.com;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class CodexLatinusGrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NON=1, ESTO=2, VERUM=3, FALSUS=4, SERIES=5, TEXTUM=6, DECIMALIS=7, NUMERUS=8, 
		LITTERA=9, BOOL=10, STRUCTURA=11, FINIS=12, SI=13, ALITER=14, DUM=15, 
		FACERE=16, PERGE=17, PER=18, INTERRUMPE=19, ACTIO=20, RATIO=21, REDDERE=22, 
		VARIABILES=23, MUNERA=24, MAIOR=25, FINISUP=26, IMPR=27, LEER=28, SUMA_INCR=29, 
		RESTA_DECR=30, SUMA=31, RESTA=32, MULTI=33, DIV=34, IGUAL=35, NO_IGUAL=36, 
		MENRO_IGUAL=37, MAYOR_IGUAL=38, MENOR=39, MAYOR=40, AND=41, OR=42, DOS_PUNTOS=43, 
		PUNTO_COMA=44, COMA=45, PUNTO=46, LLLAVE=47, RLLAVE=48, LCORCH=49, RCORCH=50, 
		LPAREN=51, RPAREN=52, ASIGNACION=53, ID=54, INT=55, DOUBLE=56, STRING=57, 
		CHARS=58, ESC=59, LINE_COMMENT=60, BLOCK_COMMENT=61, WS=62;
	public static final int
		RULE_inicio = 0, RULE_instrucciones = 1, RULE_opcion_val = 2, RULE_opcion_func = 3, 
		RULE_bloque_func = 4, RULE_funcs_val = 5, RULE_bloque_vars = 6, RULE_tipos_series = 7, 
		RULE_valores_structura_coma = 8, RULE_valores_structura_punto_coma = 9, 
		RULE_asignacion_structura = 10, RULE_func_param = 11, RULE_tipos_structura = 12, 
		RULE_tipos = 13, RULE_main = 14, RULE_instruccion = 15, RULE_asignaciones = 16, 
		RULE_ops_automaticas = 17, RULE_imprimir = 18, RULE_leer_txt = 19, RULE_expresion = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"inicio", "instrucciones", "opcion_val", "opcion_func", "bloque_func", 
			"funcs_val", "bloque_vars", "tipos_series", "valores_structura_coma", 
			"valores_structura_punto_coma", "asignacion_structura", "func_param", 
			"tipos_structura", "tipos", "main", "instruccion", "asignaciones", "ops_automaticas", 
			"imprimir", "leer_txt", "expresion"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'non'", "'esto'", "'verum'", "'falsus'", "'series'", "'textum'", 
			"'decimalis'", "'numerus'", "'littera'", "'bool'", "'structura'", "'finis'", 
			"'si'", "'aliter'", "'dum'", "'facere'", "'perge'", "'per'", "'interrumpe'", 
			"'actio'", "'ratio'", "'reddere'", "'VARIABILES'", "'MUNERA'", "'MAIOR'", 
			"'FINIS'", "'>>'", "'<<'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", 
			"'=='", "'!='", "'<='", "'>='", "'<'", "'>'", "'&&'", "'||'", "':'", 
			"';'", "','", "'.'", "'{'", "'}'", "'['", "']'", "'('", "')'", "'='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "NON", "ESTO", "VERUM", "FALSUS", "SERIES", "TEXTUM", "DECIMALIS", 
			"NUMERUS", "LITTERA", "BOOL", "STRUCTURA", "FINIS", "SI", "ALITER", "DUM", 
			"FACERE", "PERGE", "PER", "INTERRUMPE", "ACTIO", "RATIO", "REDDERE", 
			"VARIABILES", "MUNERA", "MAIOR", "FINISUP", "IMPR", "LEER", "SUMA_INCR", 
			"RESTA_DECR", "SUMA", "RESTA", "MULTI", "DIV", "IGUAL", "NO_IGUAL", "MENRO_IGUAL", 
			"MAYOR_IGUAL", "MENOR", "MAYOR", "AND", "OR", "DOS_PUNTOS", "PUNTO_COMA", 
			"COMA", "PUNTO", "LLLAVE", "RLLAVE", "LCORCH", "RCORCH", "LPAREN", "RPAREN", 
			"ASIGNACION", "ID", "INT", "DOUBLE", "STRING", "CHARS", "ESC", "LINE_COMMENT", 
			"BLOCK_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CodexLatinusGrammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CodexLatinusGrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InicioContext extends ParserRuleContext {
		public InicioContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicio; }
	 
		public InicioContext() { }
		public void copyFrom(InicioContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends InicioContext {
		public TerminalNode EOF() { return getToken(CodexLatinusGrammarParser.EOF, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public ProgramaContext(InicioContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusGrammarListener ) ((CodexLatinusGrammarListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusGrammarListener ) ((CodexLatinusGrammarListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusGrammarVisitor ) return ((CodexLatinusGrammarVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InicioContext inicio() throws RecognitionException {
		InicioContext _localctx = new InicioContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_inicio);
		int _la;
		try {
			_localctx = new ProgramaContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 58720256L) != 0)) {
				{
				setState(42);
				instrucciones();
				}
			}

			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionesContext extends ParserRuleContext {
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
	 
		public InstruccionesContext() { }
		public void copyFrom(InstruccionesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Programa_CompletoContext extends InstruccionesContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public TerminalNode FINISUP() { return getToken(CodexLatinusGrammarParser.FINISUP, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(CodexLatinusGrammarParser.PUNTO_COMA, 0); }
		public Opcion_valContext opcion_val() {
			return getRuleContext(Opcion_valContext.class,0);
		}
		public Opcion_funcContext opcion_func() {
			return getRuleContext(Opcion_funcContext.class,0);
		}
		public Programa_CompletoContext(InstruccionesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusGrammarListener ) ((CodexLatinusGrammarListener)listener).enterPrograma_Completo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusGrammarListener ) ((CodexLatinusGrammarListener)listener).exitPrograma_Completo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusGrammarVisitor ) return ((CodexLatinusGrammarVisitor<? extends T>)visitor).visitPrograma_Completo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instrucciones);
		int _la;
		try {
			_localctx = new Programa_CompletoContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARIABILES) {
				{
				setState(47);
				opcion_val();
				}
			}

			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==MUNERA) {
				{
				setState(50);
				opcion_func();
				}
			}

			setState(53);
			main();
			setState(54);
			match(FINISUP);
			setState(55);
			match(PUNTO_COMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Opcion_valContext extends ParserRuleContext {
		public Opcion_valContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opcion_val; }
	 
		public Opcion_valContext() { }
		public void copyFrom(Opcion_valContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Bloque_VariablesContext extends Opcion_valContext {
		public TerminalNode VARIABILES() { return getToken(CodexLatinusGrammarParser.VARIABILES, 0); }
		public TerminalNode MAYOR() { return getToken(CodexLatinusGrammarParser.MAYOR, 0); }
		public List<Bloque_varsContext> bloque_vars() {
			return getRuleContexts(Bloque_varsContext.class);
		}
		public Bloque_varsContext bloque_vars(int i) {
			return getRuleContext(Bloque_varsContext.class,i);
		}
		public Bloque_VariablesContext(Opcion_valContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusGrammarListener ) ((CodexLatinusGrammarListener)listener).enterBloque_Variables(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusGrammarListener ) ((CodexLatinusGrammarListener)listener).exitBloque_Variables(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusGrammarVisitor ) return ((CodexLatinusGrammarVisitor<? extends T>)visitor).visitBloque_Variables(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Opcion_valContext opcion_val() throws RecognitionException {
		Opcion_valContext _localctx = new Opcion_valContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_opcion_val);
		int _la;
		try {
			_localctx = new Bloque_VariablesContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(VARIABILES);
			setState(58);
			match(MAYOR);
			setState(60); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(59);
				bloque_vars();
				}
				}
				setState(62); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 18014398509484068L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Opcion_funcContext extends ParserRuleContext {
		public Opcion_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_opcion_func; }
	 
		public Opcion_funcContext() { }
		public void copyFrom(Opcion_funcContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Bloque_FuncionesContext extends Opcion_funcContext {
		public TerminalNode MUNERA() { return getToken(CodexLatinusGrammarParser.MUNERA, 0); }
		public TerminalNode MAYOR() { return getToken(CodexLatinusGrammarParser.MAYOR, 0); }
		public List<Bloque_funcContext> bloque_func() {
			return getRuleContexts(Bloque_funcContext.class);
		}
		public Bloque_funcContext bloque_func(int i) {
			return getRuleContext(Bloque_funcContext.class,i);
		}
		public Bloque_FuncionesContext(Opcion_funcContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusGrammarListener ) ((CodexLatinusGrammarListener)listener).enterBloque_Funciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusGrammarListener ) ((CodexLatinusGrammarListener)listener).exitBloque_Funciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusGrammarVisitor ) return ((CodexLatinusGrammarVisitor<? extends T>)visitor).visitBloque_Funciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Opcion_funcContext opcion_func() throws RecognitionException {
		Opcion_funcContext _localctx = new Opcion_funcContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_opcion_func);
		int _la;
		try {
			_localctx = new Bloque_FuncionesContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			match(MUNERA);
			setState(65);
			match(MAYOR);
			setState(67); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(66);
				bloque_func();
				}
				}
				setState(69); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==ACTIO || _la==RATIO );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Bloque_funcContext extends ParserRuleContext {
		public Bloque_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque_func; }
	 
		public Bloque_funcContext() { }
		public void copyFrom(Bloque_funcContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Funcion_ActioContext extends Bloque_funcContext {
		public TerminalNode ACTIO() { return getToken(CodexLatinusGrammarParser.ACTIO, 0); }
		public TerminalNode ID() { return getToken(CodexLatinusGrammarParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(CodexLatinusGrammarParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CodexLatinusGrammarParser.RPAREN, 0); }
		public TerminalNode LLLAVE() { return getToken(CodexLatinusGrammarParser.LLLAVE, 0); }
		public TerminalNode RLLAVE() { return getToken(CodexLatinusGrammarParser.RLLAVE, 0); }
		public TerminalNode FINIS() { return getToken(CodexLatinusGrammarParser.FINIS, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(CodexLatinusGrammarParser.PUNTO_COMA, 0); }
		public Func_paramContext func_param() {
			return getRuleContext(Func_paramContext.class,0);
		}
		public Funcs_valContext funcs_val() {
			return getRuleContext(Funcs_valContext.class,0);
		}
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public Funcion_ActioContext(Bloque_funcContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusGrammarListener ) ((CodexLatinusGrammarListener)listener).enterFuncion_Actio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusGrammarListener ) ((CodexLatinusGrammarListener)listener).exitFuncion_Actio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusGrammarVisitor ) return ((CodexLatinusGrammarVisitor<? extends T>)visitor).visitFuncion_Actio(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Funcion_RatioContext extends Bloque_funcContext {
		public TerminalNode RATIO() { return getToken(CodexLatinusGrammarParser.RATIO, 0); }
		public TiposContext tipos() {
			return getRuleContext(TiposContext.class,0);
		}
		public TerminalNode ID() { return getToken(CodexLatinusGrammarParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(CodexLatinusGrammarParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(CodexLatinusGrammarParser.RPAREN, 0); }
		public TerminalNode LLLAVE() { return getToken(CodexLatinusGrammarParser.LLLAVE, 0); }
		public TerminalNode RLLAVE() { return getToken(CodexLatinusGrammarParser.RLLAVE, 0); }
		public TerminalNode FINIS() { return getToken(CodexLatinusGrammarParser.FINIS, 0); }
		public TerminalNode PUNTO_COMA() { return getToken(CodexLatinusGrammarParser.PUNTO_COMA, 0); }
		public Func_paramContext func_param() {
			return getRuleContext(Func_paramContext.class,0);
		}
		public Funcs_valContext funcs_val() {
			return getRuleContext(Funcs_valContext.class,0);
		}
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public Funcion_RatioContext(Bloque_funcContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusGrammarListener ) ((CodexLatinusGrammarListener)listener).enterFuncion_Ratio(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CodexLatinusGrammarListener ) ((CodexLatinusGrammarListener)listener).exitFuncion_Ratio(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CodexLatinusGrammarVisitor ) return ((CodexLatinusGrammarVisitor<? extends T>)visitor).visitFuncion_Ratio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Bloque_funcContext bloque_func() throws RecognitionException {
		Bloque_funcContext _localctx = new Bloque_funcContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bloque_func);
		int _la;
		try {
			setState(112);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ACTIO:
				_localctx = new Funcion_ActioContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				match(ACTIO);
				setState(72);
				match(ID);
				setState(73);
				match(LPAREN);
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ESTO) {
					{
					setState(74);
					func_param();
					}
				}

				setState(77);
				match(RPAREN);
				setState(78);
				match(LLLAVE);
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==VARIABILES) {
					{
					setState(79);
					funcs_val();
					}
				}

				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 560698158310467546L) != 0)) {
					{
					{
					setState(82);
					instruccion();
					}
					}
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(88);
				match(RLLAVE);
				setState(89);
				match(FINIS);
				setState(90);
				match(PUNTO_COMA);
				}
				break;
			case RATIO:
				_localctx = new Funcion_RatioContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				match(RATIO);
				setState(92);
				tipos();
				setState(93);
				match(ID);
				setState(94);
				match(LPAREN);
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ESTO) {
					{
					setState(95);
					func_param();
					}
				}

				setState(98);
				match(RPAREN);
				setState(99);
				match(LLLAVE);
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==VARIABILES) {
					{
					setState(100);
					funcs_val();
					}
				}

				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(103);
					instruccion();
					}
					}
					setState(106); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 560698158310467546L) != 0) );
				setState(108);
				match(RLLAVE);
				setState(109);
				match(FINIS);
				setState(110);
				match(PUNTO_COMA);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
